# SpaceShooter

./: CHANGELOG  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Makefile.custom  README  README.md  bootstrap  configure.ac  spaceshooter.desktop
data/: spaceshooter.xpm
data/fonts/: Yanone_Kafeesatz.pcx
data/graphics/: background.tga  bullet.tga  explosion.tga  font.pcx  rocket.tga  spaceship.tga  spaceship_l.tga  spaceship_r.tga  title.tga
data/sprites/: enemies.tga
man/: spaceshooter.1  spaceshooter.1.md  spaceshooter.6  spaceshooter.6.md
src/: SpaceShooter.c  SpaceShooter.h  background.c  background.h  config.c  config.h.in  dat.c  dat.h  data.h  debug.c  debug.h  enemies.c  enemies.h  entities.h  foes.c  foes.h  game_data.c  game_data.h  image.c  image.h  main.c  main.h  player.c  player.h  screen.c  screen.h  sound.c  sound.h  sprites.h  text.c  text.h  texture.c  texture.h  timers.c  timers.h  user_data.c  user_data.h  window.c  window.h
